# ros_playground

beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/scripts/: listener.py  talker.py
crane_x7_control_kyun/: CMakeLists.txt  package.xml
crane_x7_control_kyun/config/: crane_x7_control.yaml
crane_x7_control_kyun/launch/: crane_x7_control.launch
crane_x7_control_kyun/src/: control_setting.cpp  dxlport_control.cpp  hardware.cpp  hardware_interface.cpp  joint_control.cpp  ros_node_kyun.cpp
joy_pan_tilt/: CMakeLists.txt  joy_pan_tilt.srv  package.xml
joy_pan_tilt/launch/: joy_pan_tilt.launch
joy_pan_tilt/script/: joy_pan_tilt_4.py  joy_pan_tilt_cast.py  joy_pan_tilt_ser.py
kyun_bringup/: CMakeLists.txt  package.xml
kyun_bringup/launch/: demo.launch
kyun_control/: CMakeLists.txt  package.xml
kyun_control/config/: kyun_control.yaml
kyun_control/launch/: kyun_control.launch
kyun_description/: CMakeLists.txt  package.xml
kyun_description/config/: control.yaml  controller.yaml  manipulator.yaml
kyun_description/launch/: box.launch  control.launch  display.launch  kyun.launch  kyun_control.launch  kyun_launch  kyun_simple.launch  kyun_simple_move.launch  kyun_simple_work.launch
kyun_description/launch/kyun/: kyun.launch
kyun_description/launch/kyun_simple/: control.launch  kyun_simple.launch
kyun_description/mesh/: frame12.stl  servo01.stl  servo02.stl  servo03.stl  servo04.stl
kyun_description/urdf/: box.urdf.xacro  box.xacro  kyun.urdf  kyun.xacro  kyun_simple.urdf  kyun_simple.urdf.xacro  kyun_simple.xacro  kyun_simple_move.xacro  kyun_simple_work.xacro
kyun_description/urdf/box/: box.xacro
kyun_description/urdf/kyun/: kyun.urdf
kyun_description/urdf/kyun_simple/: manipulator_parts.xacro
kyun_description/urdf/kyun_simple_work/: one_finger_gripper.xacro
kyun_description_moveit/: package.xml
kyun_description_moveit/config/: controller.yaml
kyun_description_moveit/launch/: controller.launch  display.launch
kyun_description_moveit/urdf/: kyun.xacro
kyun_description_without_gazebo/: CMakeLists.txt  package.xml
kyun_description_without_gazebo/config/: control.yaml
kyun_description_without_gazebo/launch/: defalt_controllers.launch  kyun.launch  move_group.launch
kyun_joint_state_publisher/: CMakeLists.txt  package.xml
kyun_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kyun_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kyun.srdf  ompl_planning.yaml  ros_controllers.yaml
kyun_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  kyun_moveit_controller_manager.launch  kyun_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kyun_real_description/: CMakeLists.txt  package.xml
kyun_real_description/config/: arm_joint_trajectory_controller.yaml  control_real.yaml  servo_controller_manager.yaml  servo_controllers.yaml
kyun_real_description/launch/: control_real.launch  kyun_real.launch
kyun_real_description/mesh/: frame13.stl  servo02.stl
kyun_real_description_sdk/: CMakeLists.txt  package.xml
kyun_real_description_sdk/config/: control_real.yaml
kyun_real_description_sdk/launch/: control_real.launch  kyun_real.launch
kyun_real_description_sdk/urdf/: kyun_real.xacro
kyun_real_description_workbench/: CMakeLists.txt  package.xml
kyun_real_description_workbench/config/: joint_limits.yaml  kinematics.yaml  open_manipulator.srdf
kyun_real_description_workbench/launch/: kyun_moveit.launch  kyun_real.launch  move_group.launch  moveit_rviz.launch  planning_context.launch  planning_pipeline.launch.xml
kyun_real_description_workbench/urdf/: kyun_real.xacro
kyun_real_joint_state_publisher/: CMakeLists.txt  package.xml
kyun_real_joint_state_publisher/config/: servo_controller_names.yaml
kyun_real_joint_state_publisher/src/: kyun_real_joint_state_publisher.py
moveit_config_kyun/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config_kyun/config/: joint_limits.yaml  kinematics.yaml  kyun.srdf  ompl_planning.yaml
moveit_kyun/: CMakeLists.txt  build_locally.sh  package.xml
moveit_kyun/doc/move_group_interface/launch/: move_group_interface_tutorial.launch
moveit_kyun/doc/move_group_interface/src/: move_group_current_pose.cpp  move_group_interface_tutorial.cpp
moveit_kyun/doc/move_group_python_interface/launch/: move_group_python_interface_tutorial.launch
moveit_kyun/doc/move_group_python_interface/scripts/: move_group_python_interface_tutorial.py
open_manipulator_controller_kyun/: CMakeLists.txt  package.xml
realsense2_kyun/: CMakeLists.txt  package.xml
realsense2_kyun/launch/: rs_rgbd_laser.launch
(+25 files in other folders)
