<package format="2">
  <name>kyun_description</name>
  <version>1.2.4</version>
  <description>
  kyun_description
  </description>
  <maintainer email="info@nm2.jp">n2m2ng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
</package>
