<package format="2">
  <name>kyun_real_description_workbench</name>
  <version>1.2.4</version>
  <description>
  kyun_real_description
  </description>
  <maintainer email="info@nm2.jp">n2m2ng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>controller_manager</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>control_msgs</depend>
  <depend>robot_state_publisher</depend>
</package>
